--- a/app/src/main/res/layout/v8_wheel_view.xml
+++ b/app/src/main/res/layout/v8_wheel_view.xml
@@ -2,13 +2,37 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:background="#fed255"
               android:orientation="vertical">
 
     <include layout="@layout/top_bar_title_view"/>
 
-    <com.example.a20161005.custormview.v8GAStudioLeafLoadingDemo.CanvasRotateWheel
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:gravity="center">
 
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
+            <com.example.a20161005.custormview.v8GAStudioLeafLoadingDemo.CanvasLoadingView
+                android:id="@+id/canvasRotateWheel"
+                android:layout_width="302dp"
+                android:layout_height="61dp"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"/>
+
+            <ImageView
+                android:id="@+id/ivWheel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignRight="@+id/canvasRotateWheel"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+                android:layout_marginRight="6dp"
+                android:src="@drawable/fengshan"
+                />
+        </RelativeLayout>
+    </RelativeLayout>
 </LinearLayout>
