完善叶子飘动和进度条显示的时机，实现对话框操作！

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,12 @@
     <include layout="@layout/top_bar_title_view"/>
 
     <Button
+        android:id="@+id/btn_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="测试专用"/>
+
+    <Button
         android:id="@+id/btn_mobile_coordinet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
