--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,7 +52,13 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:gravity">center</item>
         <item name="android:textSize">15sp</item>
+    </style>
 
+    <style name="custorm_loading_dialog" parent="Theme.AppCompat.Dialog">
+        <item name="android:background">@color/Red</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFrame">@null</item>
 
     </style>
 </resources>
