--- a/app/src/main/res/layout/top_bar_title_view.xml
+++ b/app/src/main/res/layout/top_bar_title_view.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="45dp"
-              android:background="@color/colorAccent"
-              android:orientation="vertical">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ll_all_toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@android:color/white"
+    android:orientation="vertical">
+
+    <View
+        android:id="@+id/view_status_bar_place"
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:background="@color/Gainsboro"
+        android:layout_height="25dp"/>
 
     <LinearLayout
         android:id="@+id/ll_all_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:orientation="vertical">
 
         <RelativeLayout
