贝尔曲线的简单学习

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,5 +69,11 @@
         android:layout_height="wrap_content"
         android:text="绘制Path"/>
 
+    <Button
+        android:id="@+id/btn_canvas_beziar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="绘制贝尔曲线"/>
+
 
 </LinearLayout>
